# endpoints-sdk-cli

./: .eslintrc  .gitignore  CHANGELOG.md  CI.yml  Cargo.toml  README.md  bin.js  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  schema.json  tsconfig.json  vitest.config.ts
.circleci/: config.yml
.github/actions/pnpm-install/: action.yml
.github/workflows/: CI.yml  auto-alpha-publish.yml  create-release-pr.yml  publish.yml  release.yml  rust.yml  test.yml
docs/: schema.json
example/: .endpoints.json
npm/: binary.js  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: commands.rs  constants.ts  executers.rs  index.d..ts  index.ts  lib.rs  main.rs  makeFiles.ts  templates.rs  types.ts  utils.rs
src/classes/: Config.ts  Repository.ts
src/commands/: add.rs  add.ts  init.rs  init.ts  install.rs  install.ts  update.rs  update.ts
src/executers/: config.rs  config.test.ts  config.ts  endpoint.rs  repository.rs
src/executers/endpoint/: createEndpointFiles.test.ts  createEndpointFiles.ts  getEndpointFilepath.test.ts  getEndpointFilepath.ts
src/executers/repository/: cloneRepository.test.ts  cloneRepository.ts  detectMainBranch.test.ts  detectMainBranch.ts  getHeadCommitHash.test.ts  getHeadCommitHash.ts  getRepositoryAlias.test.ts  getRepositoryAlias.ts  getRepositoryData.ts  (+5 more)
src/model/: config.rs  config.test.ts  config.ts  endpoint.rs  endpoint.ts
src/parts/: makeEndpointsFiles.ts  makeEndpointsSourceFromRepository.ts
src/templates/: endpoint.rs  index.ts  root.rs
src/utils/: camel-case.ts  camelCase.ts  createFile.test.ts  createFile.ts  extractServiceNameFromPath.ts  format.ts  getConfig.ts  inferRepository.ts  makeEndpointsFiles.ts  makeEndpointsSourceFromRepository.ts  parse-endpoints.ts  parse-url.ts  parseEndpoints.ts  parseUrl.ts  toCamelCase.test.ts  toCamelCase.ts  to_camel_case.rs  unique.ts  updateConfigFile.ts
(+20 files in other folders)
