[package]
name = "mes"
version = "0.1.0"
authors = ["hrdtbs <harada.tsubasa.0422@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maplit = "1.0.2"
