[package]
name = "literate-disco"
version = "0.0.0"
authors = ["hrdtbs <harada.tsubasa.0422@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi8", "serde_json", "async"] }
napi-derive = "2.12.2"
clap = { version = "4.0.0", features = ["derive"] }
maplit = "1.0.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
anyhow = { version = "1.0" }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
